# selfTracker

./: .gitignore  .impeccable.md  COMPACTION.md  DESIGN.md  PRODUCT.md  PRODUCT.md.bak  README.md  bun.lockb  developer_assessment.md  docker-compose.yml  package-lock.json  package.json
.impeccable/: design.json
backend/: .gitignore  Dockerfile  README.md  auth-schema.ts  bun.lockb  docker-compose.yml  drizzle.config.ts  global.d.ts  package.json  pnpm-lock.yaml  tsconfig.json
database-mine/: exercises.json  expenses.json  projects.json  task_items.json  weight_logs.json  workout_logs.json  workouts.json
desktop/: .env.example  ROADMAP.md  index.html  package.json  package.json.sig  tsconfig.json  vite.config.ts
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: generate_icons.sh  icon.icns
desktop/src-tauri/icons/icons/: desktop_1.1.0_amd64.deb.sig
desktop/src-tauri/src/: lib.rs
docs/: AI_SETUP.md  AUTH_FLOW_ARCHITECTURE.md  FOOD_IMPORT_NEXT_STEPS.md  HOW_TO_VIEW_DIAGRAMS.md  INCIDENT_REPORT_FOOD_IMPORT.md  MOVING_CACHES_WITH_SYMLINKS.md  OAUTH_CALLBACK_UX.md  OFFLINE_ARCHITECTURE.md  POMODORO_TIMER_PLAN.md  SPEEDING_UP_EAS_BUILDS.md  backend.md  case-study.md  desktop.md  desktop_migration_plan.md  local-first-architecture.md  mobile.md  offline-first-architecture.md  offline-first-desktop.md  offline-first-with-auth.md  project-data.ts  react-new-hooks-usage.md  social-auth-testing.md
mobile/: .easignore  .gitignore  app.json  babel.config.js  build_log.txt  bun.lockb  (+11 more)
(+748 files in other folders)
